# tablegpt-kernel

./: .pre-commit-config.yaml  Makefile  README-zh.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yaml
src/tablegpt_kernel/: __init__.py  __main__.py  kernel.py
tests/: test_version.py
