[build-system]
requires = [
  "hatchling>=1.26.3",
  "jupyter-client>=8.6.3"
]
build-backend = "hatchling.build"

[project]
name = "tablegpt-kernel"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Aofeng Su", email = "saf@zjuici.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ipykernel>=6.29.5",
  "pandas>=2.2,<3.0.0",
  "scipy>=1.13.0,<2.0.0",
  "tabulate>=0.9.0,<1.0.0",
  "scikit-learn>=1.0.0,<2.0.0",
  "statsmodels>=0.10.0,<1.0.0",
  "matplotlib>=3.8.4,<4.0.0",
  "seaborn>=0.13.1,<1.0.0",
  "mplfonts>=0.0.8,<1.0.0",
  "numexpr>=2.8.4",
  "openpyxl>=3.1.2,<4.0.0",
  "xlrd>=2.0.1",
  "odfpy",
]

[project.urls]
Documentation = "https://github.com/vegetablest/tablegpt-kernel#readme"
Issues = "https://github.com/vegetablest/tablegpt-kernel/issues"
Source = "https://github.com/vegetablest/tablegpt-kernel"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = [
    "src/tablegpt_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"

[tool.hatch.version]
path = "src/tablegpt_kernel/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tablegpt_kernel tests}"

[tool.coverage.run]
source_pkgs = ["tablegpt_kernel", "tests"]
branch = true
parallel = true
omit = [
  "src/tablegpt_kernel/__about__.py",
]

[tool.coverage.paths]
tablegpt_kernel = ["src/tablegpt_kernel"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
exclude = [
  "hatch_build.py"
]
# Allow lines to be as long as 120.
line-length = 120
